# RobinhooodCryptoBot

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_24_7.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  data_manager.py  docs_example.py  generate_keys.py  get_public_key.py  main.py  ml_engine.py  monitoring.py  nixpacks.toml  pyproject.toml  requirements.txt  risk_manager.py  robinhood_client.py  strategy_engine.py  technical_indicators.py  test_robinhood_api.py  test_signature.py  trading_bot.py
backend/app/: config.py  data_ingestor.py  error_logger.py  execution_module.py  main.py  models.py  risk_manager.py  strategy_engine.py  trading_bot.py
deployment/: railway.toml  render.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.js  App.tsx  index.css
