[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
requests = "^2.32.5"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
numpy = "^2.3.2"
ta-lib = "^0.6.5"
yfinance = "^0.2.65"
websockets = "^15.0.1"
aiohttp = "^3.12.15"
pydantic-settings = "^2.10.1"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
